Drop allocateNative static factories